  * Various lintian fixes:
    + Use ${binary:Version} for arch:any->anydependencies.
    + Don't ignore the exit code of 'make distclean'.
    + install shlibs with mode 644
    + capitalize Linux in the perl-doc long description
    + add man page symlinks for perl5.10.0 and sperl5.10.0
    + fix perl5.10.0 detached debugging symbols with a hardlink
  * Document PERL_SYS_* macros. (Closes: #522099)
  * Fix pod2man to escape backslashes in .IX entries. (Closes: #521256)

 -- Niko Tyni <ntyni@debian.org>  Fri, 09 Jan 2009 19:00:00 +0200

perl (5.10.0-19) unstable; urgency=low

  * Downgrade the perl-doc recommendation to a suggestion.
    (Closes: #496770, #442805)
  * Make File::Temp warn on cleaning up the current working directory at
    exit instead of bailing out. (Closes: #479317)
  * Fix $? when dumping core. (Closes: #509041)
  * Fix a memory leak with Scalar::Util::weaken(). (Closes: #506324)
  * [SECURITY] "second half of CVE-2007-4829": Archive::Tar no longer
    follows symlinks when unpacking. Upstream fix backported by Ubuntu.
    (Closes: #509802)

 -- Niko Tyni <ntyni@debian.org>  Thu, 01 Jan 2009 14:15:07 +0200

perl (5.10.0-18) unstable; urgency=high

  * [SECURITY] CVE-2005-0448 revisited: File::Path::rmtree no longer
    allows creating of setuid files. (Closes: #286905)

 -- Niko Tyni <ntyni@debian.org>  Fri, 21 Nov 2008 00:49:57 +0200

perl (5.10.0-17) unstable; urgency=low

  * Fix 'Unknown error' messages with attribute.pm. (Closes: #488088)
  * Add conflicts/replaces/provides for podlators-perl. (Closes: #503123)
  * Raise the timeout of ext/threads/shared/t/stress.t to accommodate
    slower build hosts. (Closes: #501970)
  * Stop t/op/fork.t relying on rand(). (Closes: #317843)
  * Fix two regexp memory leaks. (Closes: #503975)

 -- Niko Tyni <ntyni@debian.org>  Sat, 01 Nov 2008 14:48:22 +0200

perl (5.10.0-16) unstable; urgency=low

  * Revert the perldoc "pod2man --utf8" change from 5.10.0-14.