@@ -1,0 +1,2 @@
+# see #522827
+usr-share-doc-symlink-without-dependency perl
