@@ -1,0 +1,3 @@
+# see #522827
+no-copyright-file
+debian-changelog-file-missing-or-wrong-name
